--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ logging.level.org.springframework.boot.docker.compose=DEBUG
 
 
 # DB
-spring.datasource.url=jdbc:postgresql://192.168.88.247:8765/shuffle_db
-spring.datasource.username=shuffle_app
-spring.datasource.password=ZWLoaderEtiSSTU0707
+spring.datasource.url=${DB_URL:jdbc:postgresql://}
+spring.datasource.username=${DB_USER:shuffle_app}
+spring.datasource.password=${DB_PASSWORD:}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -15,6 +15,24 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 
-# auth
-spring.security.user.name=zwloader
-spring.security.user.password=0010085070
+# auth (??? ??????????? basic ???????????? ? ????? ??????? ?? ??????? ??????????)
+spring.security.user.name=${APP_ADMIN_USER:}
+spring.security.user.password=${APP_ADMIN_PASS:}
+
+# web
+server.port=${APP_PORT:8081}
+
+# db init flags
+app.db.init.enabled=${DB_INIT_ENABLED:true}
+app.db.init.createTypes=${DB_INIT_CREATE_TYPES:true}
+app.db.init.useUuidDefault=${DB_INIT_USE_UUID_DEFAULT:true}
+
+
+# env
+
+
+api.compreface=${API_KEY_COMPREFACE:}
+# external API endpoints / tokens (???????? ? env)
+api.compreface.url=${COMPREFACE_URL:}
+api.home_assistant=${HOME_ASSISTANT_TOKEN:}
+api.home_assistant.url=${HOME_ASSISTANT_URL:}
